--- a/SampleSpringApp/SampleSpringApp/src/main/resources/templates/home.html
+++ b/SampleSpringApp/SampleSpringApp/src/main/resources/templates/home.html
@@ -4,15 +4,18 @@
 
 Hello, {{.}}!
 
-<a href="/logout">Click here to logout</a>
+<button type="submit"><a href="/logout">Logout</a></button>
+<button type="submit"><a href="/chat">Go chat!</a></button>
 
 {{/name}}
 
 {{^name}}
+
 <form action="/login" method="post">
     <input type="text" placeholder="Enter your name" name="userName"/>
     <button type="submit">Login</button>
 </form>
+
 {{/name}}
 </body>
 </html>
